[package]
name = "example-druid-audio-viz"
version = "0.1.0"
edition = "2018"

[dependencies]
druid = "0.8.3"
instant = "^0.1.9"
basedrop = "^0.1.2"
log = "^0.4.14"

audio-processor-standalone = { version = "2.0.0" }
audio-garbage-collector = {  version = "1.1.0" }
atomic-queue = {  version = "1.0.1" }
audio-processor-traits = { version = "3.2.0" }

[package.metadata.augmented]
private = true
